[package]

name = "superchan"
version = "0.0.7"
authors = ["Damien Radtke <dradtke@channeliq.com>"]

description = "Communicate over a network using a channel-like API."
repository = "https://github.com/dradtke/superchan"
documentation = "http://www.rust-ci.org/dradtke/superchan/doc/superchan/"
keywords = ["network", "tcp", "channel"]
license = "MIT"

[dependencies]

rustc-serialize = "0.2.7"
bincode = "0.0.7"
